# affiliate-engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
engine/: __init__.py  cli.py  config.py
engine/bandit/: store.py  thompson.py
engine/datasets/: base.py  csv_adapter.py
engine/db/: migrate.py  pool.py
engine/gateway/: client.py  embeddings.py  providers.py  registry.py
engine/growth/: assets.py  common.py  daily.py  discovery.py  factory.py  gsc.py  indexing.py  links.py  outreach.py  planner.py  rules.py  templates.py
engine/packs/: installer.py  schema.py
engine/pipeline/: gates.py  generate.py  numbers.py
engine/scorer/: score.py
engine/scorer/importers/: gsc_csv.py
engine/sim/: clock.py  simulate.py
engine/tracker/: app.py
engine/tracker/postback/: adapters.py
packs/ai-saas/: compliance.json  pack.yaml  programs.yaml
packs/ai-saas/data/: ai_tools.csv
packs/ai-saas/prompts/: review.txt
packs/sports-betting/: compliance.json  pack.yaml  programs.yaml
packs/sports-betting/data/: team_trends.csv
packs/sports-betting/prompts/: trend_report.txt
scripts/: demo_real_llm.sh
site/: next.config.mjs  package-lock.json  package.json
site/app/: globals.css  layout.jsx  page.jsx
site/lib/: content.js  jsonld.js
site/public/widgets/: ai-saas-stats.html
sql/: 0001_init.sql  0002_growth.sql  0003_linkbuilding.sql
tests/e2e/: growth.py  smoke.py
tests/integration/: test_store.py
tests/unit/: test_bandit.py  test_gates.py  test_gateway.py  test_growth.py  test_linkbuilding.py
(+1 files in other folders)
