[project]
name = "affiliate-engine"
version = "0.1.0"
description = "Dynamic multi-niche organic-SEO affiliate platform: niches are packs, models are config"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "numpy>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "google-auth>=2.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "requests>=2.32"]

[project.scripts]
engine = "engine.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
